@@ -1,6 +1,11 @@
 # ChangeLog for media-fonts/sil-abyssinica
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/sil-abyssinica/ChangeLog,v 1.3 2011/06/14 17:56:38 grobian Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/sil-abyssinica/ChangeLog,v 1.4 2012/01/07 22:37:59 dirtyepic Exp $
+
+*sil-abyssinica-1.200 (07 Jan 2012)
+
+  07 Jan 2012; Ryan Hill <dirtyepic@gentoo.org> +sil-abyssinica-1.200.ebuild:
+  Version bump.
 
   14 Jun 2011; Fabian Groffen <grobian@gentoo.org> sil-abyssinica-1.0.ebuild:
   Marked ~x86-macos (#369547) and ~ppc-macos
